--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>nappstuff.me</title>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Napp - n4ppstar</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/db8fd9658d.js" crossorigin="anonymous"></script>
 </head>
+ 
 <body>
-	<nav class="navMenu">
-		<a href="#">Home</a>
-		<a href="#">Blog</a>
-		<a href="#">Work</a>
-		<a href="#">About</a>
-		<div class="dot"></div>
-		</nav>
-	</body>
+    <div class="card">
+      <div class"profile-container">
+        <img src="assets/pfp.png" alt="Profile Picture" class="profile-pic">
+        <div class"info">
+          <h1>Napp • n4ppstar</h1>
+          <div class="icons">
+            <a href="https://github.com/AetCloud"><i class="fa-brands fa-github"></i></a>
+            <a href="https://x.com/nappstuff"><i class="fa-brands fa-x-twitter"></i></a>
+            <a href="https://discord.com/users/520918227984056330"><i class="fa-brands fa-discord"></i></a>
+        </div>
+        </div>
+      </div>
+    </div>
+</body>
 </html>
