--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="card">
       <div class"profile-container">
-        <img src="assets/pfp.jpg" alt="Profile Picture" class="profile-pic">
+        <img src="pfp.jpg" alt="Profile Picture" class="profile-pic">
         <div class"info">
           <h1>Napp • n4ppstar</h1>
           <div class="icons">
