--- a/index.html
+++ b/index.html
@@ -7,19 +7,22 @@
     <title>Napp - n4ppstar</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/db8fd9658d.js" crossorigin="anonymous"></script>
+    <style>
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap');
+    </style>
 </head>
  
 <body>
     <div class="card">
       <div class"profile-container">
-        <img src="pfp.jpg" alt="Profile Picture" class="profile-pic">
+        <img src="http://n4.ppstar.art/pfp.jpg" alt="Profile Picture" class="profile-pic">
         <div class"info">
           <h1>Napp • n4ppstar</h1>
           <div class="icons">
             <a href="https://github.com/AetCloud"><i class="fa-brands fa-github"></i></a>
             <a href="https://x.com/nappstuff"><i class="fa-brands fa-x-twitter"></i></a>
             <a href="https://discord.com/users/520918227984056330"><i class="fa-brands fa-discord"></i></a>
-        </div>
+          </div>
         </div>
       </div>
     </div>
