--- a/index.html
+++ b/index.html
@@ -14,17 +14,19 @@
  
 <body>
     <div class="card">
-      <div class"profile-container">
-        <img src="http://n4.ppstar.art/pfp.jpg" alt="Profile Picture" class="profile-pic">
-        <div class"info">
-          <h1>Napp • n4ppstar</h1>
-          <div class="icons">
-            <a href="https://github.com/AetCloud"><i class="fa-brands fa-github"></i></a>
-            <a href="https://x.com/nappstuff"><i class="fa-brands fa-x-twitter"></i></a>
-            <a href="https://discord.com/users/520918227984056330"><i class="fa-brands fa-discord"></i></a>
-          </div>
+        <div class="profile-container">
+            <img src="http://n4.ppstar.art/pfp.jpg" alt="Profile Picture" class="profile-pic">
         </div>
-      </div>
+        <div class="info">
+            <h1>Napp • n4ppstar</h1>
+            <div class="icons">
+                <a href="https://github.com/AetCloud" title="Github"><i class="fa-brands fa-github"></i></a>
+                <a href="https://x.com/nappstuff" title="Twitter or whatever..."><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://discord.gg/t3X5xhBRJP" title="Discord Server"><i class="fa-brands fa-discord"></i></a>
+              <a href="https://bsky.app/profile/n4.ppstar.art" title="Bluesky"><i class="fa-brands fa-bluesky"></i></a>
+            </div>
+        </div>
     </div>
 </body>
+
 </html>
