--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <i class="fa-solid fa-paw"></i>
         </a>
         <a href="https://e621.net/users/766846" title="e621" onclick="openAgeWarning(event, 'This content is for 18+ users only. Proceed?', 'https://e621.net/users/766846')" class="e621-icon">
-          <img src="https://AetCloud.github.io/e621-icon.png" alt="e621 logo">
+          <img src="e621-icon.svg" alt="e621 logo">
         </a>
       </div>
     </div>
