--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
         <a href="https://discord.gg/t3X5xhBRJP" title="Discord Server" onclick="openAgeWarning(event, 'My Discord Server is for 18+ users only. Proceed?', 'https://discord.gg/t3X5xhBRJP')">
           <i class="fa-brands fa-discord"></i>
         </a>
-        <a href="https://bsky.app/profile/n4.ppstar.art" title="Bluesky" onclick="openAgeWarning(event, 'This content is for 18+ users only. Proceed?', 'https://bsky.app/profile/n4.ppstar.art')">
+        <a href="https://bsky.app/profile/n4.ppstar.art" title="Bluesky" onclick="openAgeWarning(event, 'My Bluesky is for 18+ users only. Proceed?', 'https://bsky.app/profile/n4.ppstar.art')">
           <i class="fa-brands fa-bluesky"></i>
         </a>
         <a href="https://www.furaffinity.net/user/aeeee" title="FurAffinity" onclick="openPopup(event, 'Open FurAffinity?', 'https://www.furaffinity.net/user/aeeee')">
           <i class="fa-solid fa-paw"></i>
         </a>
-        <a href="https://e621.net/users/766846" title="e621" onclick="openAgeWarning(event, 'This content is for 18+ users only. Proceed?', 'https://e621.net/users/766846')" class="e621-icon">
-          <img src="e621-icon.svg" alt="e621 logo">
+        <a href="https://e621.net/users/766846" title="e621" onclick="openAgeWarning(event, 'e621 is for 18+ users only. Proceed?', 'https://e621.net/users/766846')" class="e621-icon">
+          <img src="https://raw.githubusercontent.com/AetCloud/AetCloud.github.io/b4c968af88ad8506d182c215e892bdbc271dbdc0/e621-icon.svg" alt="e621 logo">
         </a>
       </div>
     </div>
@@ -49,7 +49,7 @@
   <!-- General Popup -->
   <div class="popup" id="popup">
     <div class="popup-content">
-      <p id="popup-text">This is a popup message.</p>
+      <p id="popup-text">Placeholder</p>
       <div class="popup-buttons">
         <button onclick="closePopup()">Close</button>
         <button onclick="confirmAction()">Confirm</button>
@@ -60,10 +60,10 @@
   <!-- 18+ Age Warning Popup -->
   <div class="popup age-warning" id="age-warning">
     <div class="popup-content">
-      <p id="age-warning-text">⚠️ This content is 18+. Are you sure you want to proceed?</p>
+      <p id="age-warning-text">Placeholder</p>
       <div class="popup-buttons">
-        <button onclick="closeAgeWarning()">No, I'm not</button>
-        <button onclick="confirmAgeAction()">Yes, I'm 18+</button>
+        <button onclick="closeAgeWarning()">Close</button>
+        <button onclick="confirmAgeAction()">Confirm</button>
       </div>
     </div>
   </div>
